[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/001-meteoroid.png" type="Texture" id=1]
[ext_resource path="res://scripts/Upgrade.gd" type="Script" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]

[node name="Upgrade" type="Control"]
anchor_right = 1.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 1
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
margin_right = 120.0
margin_bottom = 116.0
rect_min_size = Vector2( 120, 0 )
size_flags_stretch_ratio = 0.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 124.0
margin_right = 228.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Panel/HBoxContainer/Info"]
margin_right = 104.0
margin_bottom = 14.0
mouse_filter = 1
text = "Title"

[node name="SpeedLabel" type="Label" parent="Panel/HBoxContainer/Info"]
margin_top = 18.0
margin_right = 104.0
margin_bottom = 32.0
mouse_filter = 1
text = "Speed"

[node name="QuantityLabel" type="Label" parent="Panel/HBoxContainer/Info"]
margin_top = 36.0
margin_right = 104.0
margin_bottom = 50.0
mouse_filter = 1
text = "Quantity"

[node name="RecepieLabel" type="Label" parent="Panel/HBoxContainer/Info"]
margin_top = 54.0
margin_right = 104.0
margin_bottom = 68.0
mouse_filter = 1
text = "Recepie"

[node name="Buttons" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 232.0
margin_right = 336.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="Upgrade0" type="Button" parent="Panel/HBoxContainer/Buttons"]
margin_right = 104.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_vertical = 3
text = "+1"

[node name="Upgrade1" type="Button" parent="Panel/HBoxContainer/Buttons"]
margin_top = 30.0
margin_right = 104.0
margin_bottom = 56.0
mouse_filter = 1
size_flags_vertical = 3
text = "+10"

[node name="Upgrade2" type="Button" parent="Panel/HBoxContainer/Buttons"]
margin_top = 60.0
margin_right = 104.0
margin_bottom = 86.0
mouse_filter = 1
size_flags_vertical = 3
text = "+100"

[node name="Upgrade3" type="Button" parent="Panel/HBoxContainer/Buttons"]
margin_top = 90.0
margin_right = 104.0
margin_bottom = 116.0
mouse_filter = 1
size_flags_vertical = 3
text = "+1000"

[connection signal="pressed" from="Panel/HBoxContainer/Buttons/Upgrade0" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Panel/HBoxContainer/Buttons/Upgrade1" to="." method="_on_Button_pressed" binds= [ 10 ]]
[connection signal="pressed" from="Panel/HBoxContainer/Buttons/Upgrade2" to="." method="_on_Button_pressed" binds= [ 100 ]]
[connection signal="pressed" from="Panel/HBoxContainer/Buttons/Upgrade3" to="." method="_on_Button_pressed" binds= [ 1000 ]]
